--- a/index.html
+++ b/index.html
@@ -5,47 +5,53 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<script type="text/javascript" src="bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title></title>
+	<title>RealTime Weather!</title>
 </head>
 <body>
-		<nav class="navbar navbar-expand-lg navbar-light">
-			<div>
-				<a class="navbar-brand title" href="#">The "Weather Now" app!</a>
-			</div>
-		  <div class="test">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item">
-		        <a class="nav-link degrees" role="button" href="#">Farenheit</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link degrees" role="button" href="#">Celsius</a>
-		      </li>
-		      <li class="nav-item">
-		        <span class="nav-link disabled location" href="#">Location</span>
-		      </li>
-		    </ul>
-		  </div>
-		</nav>
-
-	<main>
-		<div class="card-container ">
-			<div class="card w-25 h-100 p-2">
-			  <img class="card-img" src="img/summer.jpg" alt="Card image cap">
-			  <div class="card-body">
-			    <h5 class="card-title">Its a sunny Day</h5>
-			    <p class="card-text">The temperature is 28ºC and its an awesome day to go outside and have fun at the beach, the park, walk a your dog and bring the kids to the sun.</p>
-			    <p>Todays its Monday 6 of May</p>
-			  </div>
-			</div>
-
-			<div class="card w-50 h-100 p-2">
-			  <img class="card-img complemmentary-img img-fluid" src="img/summer.jpg" alt="Card image cap">
+	<nav class="navbar navbar-expand-lg navbar-light">
+		<div class="center nav-container">
+			<a class="navbar-brand title" href="#">RealTime Weather!</a>
+			<div class="menu">
+				<ul class="navbar-nav mr-auto">
+			    	<li class="nav-item">
+			        	<a class="nav-link degrees" role="button" href="#">Farenheit</a>
+			      	</li>
+			      	<li class="nav-item">
+			        	<a class="nav-link degrees" role="button" href="#">Celsius</a>
+			      	</li>
+			      	<li class="nav-item">
+			        	<span class="nav-link disabled location" role="button" href="#">Location</span>
+			      	</li>
+			    </ul>
 			</div>
 		</div>
+	</nav>
+
+	<main class="container center p-1">
+			<div class="card-container test">
+				<div class="card w-25 h-100 p-2">
+				 	<img class="card-img" src="img/800 - clear.svg" alt="Card image cap">
+					<div class="card-body">
+				    	<h5 class="card-title">Its a sunny Day</h5>
+				    	<p class="card-text">The temperature is 28ºC and its an awesome day to go outside and have fun at the beach, the park, walk a your dog and bring the kids to the sun.</p>
+				    	<p>Todays its Monday 6 of May</p>
+				  	</div>
+				</div>
+
+				<div class="card w-100 h-100 p-2 ">
+					<img class="card-img complemmentary-img img-fluid" src="img/summer.jpg" alt="Card image cap">
+				</div>
+			</div>
 	</main>
+
+	<div>
+		Icons made by 
+		<a href="https://www.freepik.com/" title="Freepik">Freepik</a> 
+		from 
+		<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+		is licensed by 
+		<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+	</div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
-
-
-
