--- a/index.html
+++ b/index.html
@@ -1,97 +1,93 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link href="https://fonts.googleapis.com/css?family=Oswald|Roboto:400,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-	<script type="text/javascript" src="bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title></title>
-</head>
-<body>
-		<nav class="navbar navbar-expand-lg navbar-light">
-			<div>
-				<a class="navbar-brand title" href="#">The "Weather Now" app!</a>
-			</div>
-		  <div class="test">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item">
-		        <a class="nav-link degrees" role="button" href="#">Farenheit</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link degrees" role="button" href="#">Celsius</a>
-		      </li>
-		      <li class="nav-item">
-		        <span class="nav-link disabled location" href="#">Location</span>
-		      </li>
-		    </ul>
-		  </div>
-		</nav>
+    <head>
+        <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto:400,700&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+        <script type="text/javascript" src="bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <title>RealTime Weather!</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div>
+                <a class="navbar-brand title" href="#">RealTime Weather</a>
+            </div>
+            <div class="test">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link degrees" role="button" href="#">Farenheit</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link degrees" role="button" href="#">Celsius</a>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-link disabled location" href="#" id="location">Location</span>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-	<main>
-		<div class="card-container ">
-			<div class="card w-25 h-100 p-2 main-card" id="test1">
-			  <img class="card-img" src="img/sun.svg" alt="Card image cap">
-			  <div class="card-body">
-			    <h5 class="card-title">Its a sunny Day</h5>
-			    <p class="card-text">The temperature is 28ºC and its an awesome day to go outside and have fun at the beach, the park, walk a your dog and bring the kids to the sun.</p>
-			    <p>Todays its Monday 6 of May</p>
-			  </div>
-			</div>
+        <main>
+            <div class="card-container ">
+                <div class="card w-25 h-100 p-2 main-card" id="test1">
+                    <img class="card-img" src="img/sun.svg" alt="Card image cap" id="weather_icon" />
+                    <div class="card-body">
+                        <h5 class="card-title" id="weather">Its a sunny Day</h5>
+                        <p class="card-text" id="temp"></p>
+                        <p id="date"></p>
+                    </div>
+                </div>
 
-			<div class="card w-75 h-100 forecast-container">
-				<div class="containers h-50">
-					<div class="card w-33 h-80 forecast">
-						<img class="card-img forecast-img" src="img/sun.svg">
-						<div class="card-body">
-							<h5 class="card-title">Clear Sky</h5>
-							<p class="card-text forecast-temp">28 ºC</p>
-						</div>
-					</div>
-					<div class="card w-33 h-80 forecast">
-						<img class="card-img forecast-img" src="img/sun.svg">
-						<div class="card-body">
-							<h5 class="card-title">Clear Sky</h5>
-							<p class="card-text forecast-temp">28 ºC</p>
-						</div>
-					</div>
-					<div class="card w-33 h-80 forecast">
-						<img class="card-img forecast-img" src="img/sun.svg">
-						<div class="card-body">
-							<h5 class="card-title">Clear Sky</h5>
-							<p class="card-text forecast-temp">28 ºC</p>
-						</div>
-					</div>
-				</div>
-				<div class="containers h-50">
-					<div class="card w-33 h-80 forecast">
-						<img class="card-img forecast-img" src="img/sun.svg">
-						<div class="card-body">
-							<h5 class="card-title">Clear Sky</h5>
-							<p class="card-text forecast-temp">28 ºC</p>
-						</div>
-					</div>
-					<div class="card w-33 h-80 forecast">
-						<img class="card-img forecast-img" src="img/sun.svg">
-						<div class="card-body">
-							<h5 class="card-title">Clear Sky</h5>
-							<p class="card-text forecast-temp">28 ºC</p>
-						</div>
-					</div>
-					<div class="card w-33 h-80 forecast">
-						<img class="card-img forecast-img" src="img/sun.svg">
-						<div class="card-body">
-							<h5 class="card-title">Clear Sky</h5>
-							<p class="card-text forecast-temp">28 ºC</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			
-		</div>
-	</main>
-	<script type="text/javascript" src="script.js"></script>
-</body>
+                <div class="card w-75 h-100 forecast-container">
+                    <div class="containers h-50">
+                        <div class="card w-33 h-80 forecast">
+                            <img class="card-img forecast-img" src="img/sun.svg" />
+                            <div class="card-body">
+                                <h5 class="card-title">Clear Sky</h5>
+                                <p class="card-text forecast-temp">28 ºC</p>
+                            </div>
+                        </div>
+                        <div class="card w-33 h-80 forecast">
+                            <img class="card-img forecast-img" src="img/sun.svg" />
+                            <div class="card-body">
+                                <h5 class="card-title">Clear Sky</h5>
+                                <p class="card-text forecast-temp">28 ºC</p>
+                            </div>
+                        </div>
+                        <div class="card w-33 h-80 forecast">
+                            <img class="card-img forecast-img" src="img/sun.svg" />
+                            <div class="card-body">
+                                <h5 class="card-title">Clear Sky</h5>
+                                <p class="card-text forecast-temp">28 ºC</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="containers h-50">
+                        <div class="card w-33 h-80 forecast">
+                            <img class="card-img forecast-img" src="img/sun.svg" />
+                            <div class="card-body">
+                                <h5 class="card-title">Clear Sky</h5>
+                                <p class="card-text forecast-temp">28 ºC</p>
+                            </div>
+                        </div>
+                        <div class="card w-33 h-80 forecast">
+                            <img class="card-img forecast-img" src="img/sun.svg" />
+                            <div class="card-body">
+                                <h5 class="card-title">Clear Sky</h5>
+                                <p class="card-text forecast-temp">28 ºC</p>
+                            </div>
+                        </div>
+                        <div class="card w-33 h-80 forecast">
+                            <img class="card-img forecast-img" src="img/sun.svg" />
+                            <div class="card-body">
+                                <h5 class="card-title">Clear Sky</h5>
+                                <p class="card-text forecast-temp">28 ºC</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <script type="text/javascript" src="script.js"></script>
+    </body>
 </html>
-
-
-<!-- <div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
