--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <title>RealTime Weather!</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light hidden">
             <div>
                 <a class="navbar-brand title" href="#">RealTime Weather</a>
             </div>
-            <div class="test">
+            <div>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link degrees" role="button" href="#">Farenheit</a>
@@ -21,73 +21,74 @@
                         <a class="nav-link degrees" role="button" href="#">Celsius</a>
                     </li>
                     <li class="nav-item">
-                        <span class="nav-link disabled location" href="#" id="location">Location</span>
+                        <span class="nav-link location disabled" href="#" id="location">Location</span>
                     </li>
                 </ul>
             </div>
         </nav>
 
         <main>
-            <div class="card-container ">
-                <div class="card w-25 h-100 p-2 main-card" id="test1">
-                    <img class="card-img" src="img/sun.svg" alt="Card image cap" id="weather_icon" />
-                    <div class="card-body">
-                        <h5 class="card-title" id="weather">Its a sunny Day</h5>
-                        <p class="card-text" id="temp"></p>
-                        <p id="date"></p>
+            <div class="card-container">
+                <div class="card w-25 h-100 container ">
+                    <div class="card w-90 h-90 p-2 main-card">
+                        <img class="card-img" src="img/sun.svg" alt="Card image cap" id="weather_icon" />
+                        <div class="card-body h-50 h-50 w-100 p-0">
+                            <h5 class="card-title weather w-100 " id="weather">Its a sunny Day</h5>
+                            <p class="card-text current-temp" id="temp"></p>
+                            <p id="date" class="current-date"></p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="card w-75 h-100 forecast-container">
                     <div class="containers h-50">
-                        <div class="card w-33 h-80 forecast">
+                        <div class="card w-50 h-80 forecast">
                             <img class="card-img forecast-img" src="img/sun.svg" />
-                            <div class="card-body">
-                                <h5 class="card-title">Clear Sky</h5>
-                                <p class="card-text forecast-temp">28 ºC</p>
+                            <div class="card-body h-50">
+                                <h5 class="card-title forecast-weather w-100">Clear Sky</h5>
+                                <p class="card-text temp forecast-temp">28 ºC</p>
+                                <p class="forecast-date"></p>
                             </div>
                         </div>
-                        <div class="card w-33 h-80 forecast">
+                        <div class="card w-50 h-80 forecast">
                             <img class="card-img forecast-img" src="img/sun.svg" />
-                            <div class="card-body">
-                                <h5 class="card-title">Clear Sky</h5>
-                                <p class="card-text forecast-temp">28 ºC</p>
-                            </div>
-                        </div>
-                        <div class="card w-33 h-80 forecast">
-                            <img class="card-img forecast-img" src="img/sun.svg" />
-                            <div class="card-body">
-                                <h5 class="card-title">Clear Sky</h5>
-                                <p class="card-text forecast-temp">28 ºC</p>
+                            <div class="card-body h-50">
+                                <h5 class="card-title forecast-weather">Clear Sky</h5>
+                                <p class="card-text temp forecast-temp">28 ºC</p>
+                                <p class="forecast-date"></p>
                             </div>
                         </div>
                     </div>
                     <div class="containers h-50">
                         <div class="card w-33 h-80 forecast">
                             <img class="card-img forecast-img" src="img/sun.svg" />
-                            <div class="card-body">
-                                <h5 class="card-title">Clear Sky</h5>
-                                <p class="card-text forecast-temp">28 ºC</p>
+                            <div class="card-body h-50">
+                                <h5 class="card-title forecast-weather">Clear Sky</h5>
+                                <p class="card-text temp forecast-temp">28 ºC</p>
+                                <p class="forecast-date"></p>
                             </div>
                         </div>
                         <div class="card w-33 h-80 forecast">
                             <img class="card-img forecast-img" src="img/sun.svg" />
-                            <div class="card-body">
-                                <h5 class="card-title">Clear Sky</h5>
-                                <p class="card-text forecast-temp">28 ºC</p>
+                            <div class="card-body h-50">
+                                <h5 class="card-title forecast-weather">Clear Sky</h5>
+                                <p class="card-text temp forecast-temp">28 ºC</p>
+                                <p class="forecast-date"></p>
                             </div>
                         </div>
                         <div class="card w-33 h-80 forecast">
                             <img class="card-img forecast-img" src="img/sun.svg" />
-                            <div class="card-body">
-                                <h5 class="card-title">Clear Sky</h5>
-                                <p class="card-text forecast-temp">28 ºC</p>
+                            <div class="card-body h-50">
+                                <h5 class="card-title forecast-weather">Clear Sky</h5>
+                                <p class="card-text temp forecast-temp">28 ºC</p>
+                                <p class="forecast-date"></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </main>
+
         <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
