fixed issues with city modal

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search By City" aria-label="Search" id="city" />
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search By City" aria-label="Search" id="city" autocomplete="off" />
                         <button class="btn btn-outline-success my-2 my-sm-0 search" type="button" data-target="#sharedModal" data-toggle="modal" id="citybtn">Search</button>
                     </form>
                 </div>
