fixed issue that reloaded the page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="modal-body">
                             <form class="form-inline my-2 my-lg-0">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search By City" aria-label="Search" id="searchForMobile" required />
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search By City" aria-label="Search" id="searchForMobile" required autocomplete="off"/>
                                 <button class="btn btn-outline-success my-2 my-sm-0 search" id="mobile-search" type="button" data-target="#sharedModal" data-dismiss="modal" data-toggle="modal">Search</button>
                             </form>
                         </div>
