--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button class="btn btn-outline-success my-2 my-sm-0" type="button" data-target="#cityForecast" data-dismiss="modal" data-toggle="modal" id="city-forecast">Forecast</button>
+                            <button class="btn btn-outline-success my-2 my-sm-0 search" type="button" data-target="#cityForecast" data-dismiss="modal" data-toggle="modal" id="city-forecast">Forecast</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div>
                     </div>
